# coachKata

./: .gitignore  DEV_NOTES.md  README.md  pyproject.toml
libraries/: README.md  pyproject.toml
libraries/src/coachkata_libraries/: __init__.py
libraries/src/coackata/: __init__.py  compare_image.py
models/: pyproject.toml
notebooks/sentiment_analysis/: ONNX_MEMORY_RELEASE_EXPLANATION.md  README_cardiffnlp_sentiment.md  SentimentAnalysisWithOnnx.ipynb  call_memory_tracking.py  cardiffnlp_sentiment_onnx.py  example_model_unloading.py  example_usage_refactored.py  onnx_memory_tracking.py  simple_memory_tracking.py  test_cardiffnlp_sentiment.py  test_thread_safe_tracker.py  test_unloading_fix.py
protos/: inference_director.proto
protos/config/: proto-config.json
scripts/: generate_proto.py
services/inference/: ARCHITECTURE.md  README.md  pyproject.toml
services/inference/app/: __init__.py  client_test.py  main.py
services/inference/app/observe/: __init__.py
services/inference/app/server/: __init__.py  grpc_server.py  web_server.py
services/inference/src/observe/: __init__.py
