[project]
name = "coachkata-workspace"
version = "0.1.0"
description = "Coach Kata Monorepo Workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "observe",
]

[tool.uv.workspace]
members = [
    "libraries",
    "services/*"
]

[tool.uv.sources]
coachkata-libraries = { workspace = true }
observe = { workspace = true }

[project.optional-dependencies]
dev = [
    "betterproto2-compiler",
    "deptry",
    "grpc-requests",
    "grpcio-tools",
    "hatchling",
    "httpx",
    "poethepoet",
    "pyright",
    "pytest-asyncio",
    "pytest-cov",
    "pytest>=7.0.0",
    "ruff",
]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["coachkata"]

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "Darwin"
typeCheckingMode = "strict"
