[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coachkata-models"
version = "0.1.0"
description = "ML Models for Coach Kata"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "coachkata-libraries",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/coachkata_models"] 